# vehikular

./: .env  Cargo.toml  Dockerfile  TODO.md  clippy.toml  dev-db.docker-compose.yml  docker-compose.yml  release.docker-compose.yml  update_entities.sh
card_reader/: Cargo.toml
card_reader/examples/: read_tlv.rs
card_reader/src/: lib.rs
desktop-app/: Cargo.toml
desktop-app/examples/: read_tlv.rs
desktop-app/src/: card_reading.rs  gui.rs  lib.rs  main.rs  parsing.rs  reader.rs  tlv.rs
examples/: read_tlv.rs
shared/: Cargo.toml
shared/src/: data.rs
src/: data.rs  lib.rs  main.rs
web-app/: Cargo.toml
web-app/.sqlx/: query-03f1c68992f44bd18bfc90c016bb1171a88d4ff418881f174176fdd49efd2ee6.json  query-101a6ea25efaa3d36a2397287467ef8f5c6e3ddaf6db7c6aeb2474294e0fd821.json  query-11b888c564fbddc02a6cb2544024b1ff4f978c09bcaa7c78feed76efeec6ed5f.json  query-34de674c4591cf10d42d5d813ce920bee944584e1b24de6a24c7bbb2158289d1.json  query-427e2e808b0327a3878f3055d53f09f36096f0918a0dd3b82bb9324298ef296e.json  query-4a7de90a36b695f896a17f00bc8fc563d03f5158edbce715af43171c6316dd7a.json  query-4f28d0688ac505db02d130433da2c7eaf41d563c22d3ef509db764ebff9301c3.json  query-505bf1406251491d8bd9fcb6ac3755bc788b7b74464ae3acf75ae510de94125a.json  query-54ac693979330acb92d0bc57cf379d7d38559791c2b3670184ee7c70db23bef6.json  query-5fef194159a5bf50de28141474d35fc36c607072feaec25df2f014a186fba629.json  query-77053f17ad41f9f44bdfa4757c8779ae32a73cd8fe7d1d9535c576a0fea4c320.json  query-90f7162bbde2bde9112987dd2c120400a28636f843e0d93d9e82d13682f4ef54.json  query-af6c84fb7676c7203006517456ad6571d2439a7b58de78149b84a79994a3d716.json  query-b12c78782f2ba7ae05f65712b01a01d08fac1a0506e9549ecd340e91e59a6a1b.json  query-c4891821c990e210e53bb0131d0a01f82f40699ace97320e803fda594ea84efd.json  query-e476295de7bbf205eb11c2a4046c46c9352f30eb4c32bad44714b9053841fd58.json  query-e4b0abb9deb7f8ea1075f0fbe9d6f7d4ea5ad06de7e30b872134f430d9333b3e.json  query-fb9a0343f154d04aa05503972316c63b2f21b2d5de4fa2ee3ffa61bc74b6d790.json  query-fe2e488c739aaf21743f7d14d25d8453125b3b1bb2abd16d78dd1a5d7afcd2fc.json  query-fe800a8ed58cc9435a049a9d20f94dc51e13074cacb2e7a73bfc25a247b4dcc9.json
web-app/migrations/: 20230816071407_initial.down.sql  20230816071407_initial.up.sql  20230922190409_add_author.down.sql  20230922190409_add_author.up.sql
web-app/src/: authentication.rs  error.rs  main.rs  templates.rs
web-app/src/database/: convert.rs  fairing.rs  mod.rs
web-app/src/database/entities/: active_session.rs  car_registration.rs  maintenance_history.rs  migration.rs  mod.rs  prelude.rs  user.rs  vehicle_notes.rs
web-app/src/entities/: car_registration.rs  convert.rs  mod.rs  prelude.rs
web-app/src/migrator/: m20230622_000001_create_registraition.rs  m20230629_000002_create_maintenance_history.rs  m20230701_000003_create_notes.rs  m20230703_000004_create_user.rs  migration_000001_initial.sql  mod.rs
web-app/templates/: account_page.html  base.html  index.html  login.html  macros.html  register.html  vehicle.html
web-app/webroot/: style.css  style.less
