[package]
name = "card_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
hex = "0.4.3"
color-eyre = "0.6.2"
serde_json = "1.0.96"
iso7816-tlv = "0.4.3"
serde = { version = "1.0.163", features = ["derive"] }
thiserror = "1.0.40"
pcsc = "2.8.0"