[package]
name = "desktop-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
hex = "0.4.3"
once_cell = "1.17.1"
card_reader = { path = "../card_reader" }
serde_json = "1.0.96"
pcsc = "2.8.0"