[package]
name = "desktop-app"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
hex = "0.4.3"
once_cell = "1.17.1"
shared = { path = "../shared" }
serde_json = "1.0.96"
pcsc = "2.8.0"
clap = { version = "4.2.7", features = ["derive"] }
iso7816-tlv = { git = "https://github.com/technologicalMayhem/iso7816-tlv", features = ["std"] }
serde = { version = "1.0.163", features = ["derive"] }
thiserror = "1.0.40"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
iced = "0.9"
simplelog = "0.12.1"
log = "0.4.19"
