[package]
name = "web-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
thiserror = "1.0.40"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }