[package]
name = "web-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
thiserror = "1.0.40"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tera = "1"
lazy_static = "1.4"
include_dir = "0.7.3"
sea-orm = { version = "^0.9.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
sea-orm-migration = "^0.9.0"
